--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <title>Maket 1</title>
     </head>
     <body>
@@ -10,7 +10,7 @@
             <nav>
                 <ul class="block-nav_ul">
                     <li class="item elem-border burger"></li>
-                    <li class="item elem-logo"><img src="./img/logo.svg" alt="Логотип компании" width="96px" height="50px"></li>
+                    <li class="item elem-logo"><img src="img/logo.svg" alt="Логотип компании" width="96px" height="50px"></li>
                     <li class="right">
                         <ul class="block-nav_ul ">
                             <li class="item elem-border call not-mobial"></li>
@@ -52,7 +52,7 @@
                         <a class="elem-expand">Читать далее</a>
                     </div>
                     
-                    <img src="/img/_MG_3223.png" align="right" class="img-post">                   
+                    <img src="img/_MG_3223.png" align="right" class="img-post">                   
                 </div>
             </article>
         </main>
