Edit index.html , del /img

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="elem-expand">Читать далее</a>
                     </div>
                     
-                    <img src="img/_MG_3223.png" align="right" class="img-post">                   
+                    <img src="css/img/_MG_3223.png" align="right" class="img-post">                   
                 </div>
             </article>
         </main>
