--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav>
                 <ul class="block-nav_ul">
                     <li class="item elem-border burger"></li>
-                    <li class="item elem-logo"><img src="img/logo.svg" alt="Логотип компании" width="96px" height="50px"></li>
+                    <li class="item elem-logo"><img src="css/img/logo.svg" alt="Логотип компании" width="96px" height="50px"></li>
                     <li class="right">
                         <ul class="block-nav_ul ">
                             <li class="item elem-border call not-mobial"></li>
