Create index.html for maker-1 GitHub Pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav>
                 <ul class="block-nav_ul">
                     <li class="item elem-border burger"></li>
-                    <li class="item elem-logo"><img src="css/img/logo.svg" alt="Логотип компании" width="96px" height="50px"></li>
+                    <li class="item elem-logo"><img src="css/img/logo.svg" alt="Логотип компании" width="96" height="50"></li>
                     <li class="right">
                         <ul class="block-nav_ul ">
                             <li class="item elem-border call not-mobial"></li>
@@ -52,7 +52,7 @@
                         <a class="elem-expand">Читать далее</a>
                     </div>
                     
-                    <img src="css/img/_MG_3223.png" align="right" class="img-post">                   
+                    <img src="css/img/_MG_3223.png" alt="" class="img-post">                   
                 </div>
             </article>
         </main>
