--- a/index.html
+++ b/index.html
@@ -6,55 +6,57 @@
         <title>Maket 1</title>
     </head>
     <body>
-        <header class="not-desktop">
-            <nav>
-                <ul class="block-nav_ul">
-                    <li class="item elem-border burger"></li>
-                    <li class="item elem-logo"><img src="css/img/logo.svg" alt="" width="96" height="50"></li>
-                    <li class="right">
-                        <ul class="block-nav_ul ">
-                            <li class="item elem-border call not-mobial"></li>
-                            <li class="item elem-border chat not-mobial"></li>
-                            <li class="item elem-border profile not-mobial"></li>
-                            <li class="item devider"></li>
-                            <li class="item elem-border repair-request"></li>
-                            <li class="item elem-border repair-status"></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <main class="block-content">
-            <article>
-                <div class="elem-x">
-                    <h1 class="elem-title">Услуги и сервисы</h1> 
-                    <div class="desktop right">
-                        <div class="item">Оставить заявку <div class="elem-border repair-request"></div></div>
-                        <div class="item">Статус ремонта <div class="elem-border repair-status"></div></div>
+        <div class="container">
+            <header class="not-desktop">
+                <nav>
+                    <ul class="block-nav_ul">
+                        <li class="item elem-border burger"></li>
+                        <li class="item elem-logo"><img src="css/img/logo.svg" alt="" width="96" height="50"></li>
+                        <li class="right">
+                            <ul class="block-nav_ul ">
+                                <li class="item elem-border call not-mobial"></li>
+                                <li class="item elem-border chat not-mobial"></li>
+                                <li class="item elem-border profile not-mobial"></li>
+                                <li class="item devider"></li>
+                                <li class="item elem-border repair-request"></li>
+                                <li class="item elem-border repair-status"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <main class="block-content">
+                <article>
+                    <div class="elem-x">
+                        <h1 class="elem-title">Услуги и сервисы</h1> 
+                        <div class="desktop right">
+                            <div class="item">Оставить заявку <div class="elem-border repair-request"></div></div>
+                            <div class="item">Статус ремонта <div class="elem-border repair-status"></div></div>
+                        </div>
                     </div>
-                </div>
-                
-                <ul class="block-slider">
-                    <li class="items mod-activiti">Ремонтируемые бренды</li>
-                    <li class="items">Ремонтируемые устройства</li>
-                    <li class="items">Цены на услуги</li>
-                    <li class="items">Адреса сервисных центров</li>
-                    <li class="items">Специальные цены</li>                
-                </ul>
-                <h2 class="desktop">Отзывы</h2>
 
-                <div class="block-post">
-                    <div>
-                        <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
-                            <br><br>
-                            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
-                        </p>
-                        <a class="elem-expand">Читать далее</a>
+                    <ul class="block-slider">
+                        <li class="items mod-activiti">Ремонтируемые бренды</li>
+                        <li class="items">Ремонтируемые устройства</li>
+                        <li class="items">Цены на услуги</li>
+                        <li class="items">Адреса сервисных центров</li>
+                        <li class="items">Специальные цены</li>                
+                    </ul>
+                    <h2 class="desktop">Отзывы</h2>
+
+                    <div class="block-post">
+                        <div>
+                            <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+                                <br><br>
+                                Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
+                            </p>
+                            <a class="elem-expand">Читать далее</a>
+                        </div>
+
+                        <img src="css/img/MG_3223.png" alt="" class="img-post">                   
                     </div>
-                    
-                    <img src="css/img/_MG_3223.png" alt="" class="img-post">                   
-                </div>
-            </article>
-        </main>
+                </article>
+            </main>
+           </div>
     </body>
 </html>
