--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
-        <title>Maket 1</title>
+        <title>Макет #1</title>
     </head>
     <body>
         <div class="container">
