--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
+        <link href="css/main.css" rel="stylesheet">
         <title>Макет #1</title>
     </head>
     <body>
