--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </ul>
                 </nav>
             </header>
-            <main class="block-content">
+            <main class="main-content">
                 <div class="elem-x">
                     <h1 class="elem-title">Услуги и сервисы</h1> 
                     <div class="desktop right">
@@ -35,23 +35,23 @@
                     </div>
                 </div>
 
-                <ul class="block-slider">
-                    <li class="items mod-activiti">Ремонтируемые бренды</li>
-                    <li class="items">Ремонтируемые устройства</li>
-                    <li class="items">Цены на услуги</li>
-                    <li class="items">Адреса сервисных центров</li>
-                    <li class="items">Специальные цены</li>                
+                <ul class="sliderMenu">
+                    <li class="sliderItems sliderActiv">Ремонтируемые бренды</li>
+                    <li class="sliderItems">Ремонтируемые устройства</li>
+                    <li class="sliderItems">Цены на услуги</li>
+                    <li class="sliderItems">Адреса сервисных центров</li>
+                    <li class="sliderItems">Специальные цены</li>                
                 </ul>
 
                 <h2 class="desktop">Отзывы</h2>
 
-                <div class="block-post">
+                <div class="main-post">
                     <div>
                         <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
                             <br><br>
                             Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
                         </p>
-                        <a class="elem-expand">Читать далее</a>
+                        <a class="expand">Читать далее</a>
                     </div>
                     <img src="css/img/MG_3223.png" alt="" class="img-post">                   
                 </div>
