Create sidebar-nav.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     </head>
     <body>
         <div class="container">
-            <header class="not-desktop">
+            <header class="head__not-desktop">
                 <nav>
-                    <ul class="block-nav_ul">
-                        <li class="item elem-border burger"></li>
-                        <li class="item elem-logo"><img src="css/img/logo.svg" alt="" width="96" height="50"></li>
-                        <li class="right">
-                            <ul class="block-nav_ul ">
-                                <li class="item elem-border call not-mobial"></li>
-                                <li class="item elem-border chat not-mobial"></li>
-                                <li class="item elem-border profile not-mobial"></li>
-                                <li class="item devider"></li>
-                                <li class="item elem-border repair-request"></li>
-                                <li class="item elem-border repair-status"></li>
+                    <ul class="nav">
+                        <li class="nav__item border burger"></li>
+                        <li class="nav__item"><img src="css/img/logo.svg" alt="" width="96" height="50"></li>
+                        <li class="nav__item--right">
+                            <ul class="nav ">
+                                <li class="nav__item border call not-mobial"></li>
+                                <li class="nav__item border chat not-mobial"></li>
+                                <li class="nav__item border profile not-mobial"></li>
+                                <li class="nav__item devider"></li>
+                                <li class="nav__item border repair-request"></li>
+                                <li class="nav__item border repair-status"></li>
                             </ul>
                         </li>
                     </ul>
@@ -30,8 +30,8 @@
                 <div class="elem-x">
                     <h1 class="elem-title">Услуги и сервисы</h1> 
                     <div class="desktop right">
-                        <div class="item">Оставить заявку <div class="elem-border repair-request"></div></div>
-                        <div class="item">Статус ремонта <div class="elem-border repair-status"></div></div>
+                        <div class="item">Оставить заявку <div class="border repair-request"></div></div>
+                        <div class="item">Статус ремонта <div class="border repair-status"></div></div>
                     </div>
                 </div>
 
