--- a/sidebar-nav.html
+++ b/sidebar-nav.html
@@ -14,9 +14,7 @@
                         <li class="nav__item border close"></li>
                         <li class="nav__item"><img src="css/img/logo.svg" alt="" width="96" height="50"></li>
                         <li class="nav__item--right">
-                            <ul class="nav">
-                                <li class="nav__item border search"></li>
-                            </ul>
+                            <span class="nav__item border search"></span>
                         </li>
                     </ul>
                 </nav>
@@ -41,7 +39,7 @@
                 <div class="email">mail@cps.com</div>
                 <h2 class="phone">8 800 890 8900</h2>
                 <div class="lang">
-                    <span class="lang--activ">RU</span>
+                    <span class="lang_activ">RU</span>
                     <span>EN</span>
                     <span>CN</span>
                 </div>
