Create sidebar-nav.html for GitHub Pages

--- a/sidebar-nav.html
+++ b/sidebar-nav.html
@@ -39,7 +39,7 @@
                 <div class="email">mail@cps.com</div>
                 <h2 class="phone">8 800 890 8900</h2>
                 <div class="lang">
-                    <span class="lang_activ">RU</span>
+                    <span class="lang--activ">RU</span>
                     <span>EN</span>
                     <span>CN</span>
                 </div>
