Create swiper.html for GitHub Pages

--- a/swiper.html
+++ b/swiper.html
@@ -4,16 +4,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link href="css/main.css" rel="stylesheet">
-        <!--<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />-->
+
         <title>Макет #1</title>
     </head>
     <body>
         <div class="container">
             <div class="slider--title">Ремонт техники различных брендов</div>
-            <div class="swiper mySwiper">
+            <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="css/img/brand/lenovo.png"></div>
                     <div class="swiper-slide"><img src="css/img/brand/samsung.png"></div>
@@ -23,9 +20,20 @@
                     <div class="swiper-slide"><img src="css/img/brand/acer.png"></div>
                     <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
                     <div class="swiper-slide"><img src="css/img/brand/bosch.png"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/bosch.png"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
                 </div>
-                <div class="swiper-pagination desktop"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+            <div class="btn">
+                <div class="btn--text">
+                    <span class="span">Показать все</span>
+                </div>
             </div>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
