--- a/swiper.html
+++ b/swiper.html
@@ -12,17 +12,17 @@
             <div class="slider--title">Ремонт техники различных брендов</div>
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="css/img/brand/lenovo.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/samsung.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/apple.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/sony.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/viewsonic.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/acer.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/bosch.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/bosch.png"></div>
-                    <div class="swiper-slide"><img src="css/img/brand/hp.png"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/lenovo.png" alt="Brand Lenovo"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/samsung.png" alt="Brand Samsung"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/apple.png" alt="Brand Apple"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/sony.png" alt="Brand Sony"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/viewsonic.png" alt="Brand viewsonic"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/acer.png" alt="Brand Acer"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/hp.png" alt="Brand HP"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/bosch.png" alt="Brand Bosch"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/hp.png" alt="Brand HP"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/bosch.png" alt="Brand Bosch"></div>
+                    <div class="swiper-slide"><img src="css/img/brand/hp.png" alt="Brand HP"></div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
