--- a/indexfull.html
+++ b/indexfull.html
@@ -10,7 +10,7 @@
         <div class="modal hidden" data-modal="1">
             <div class="modal__wrapper">
                 <div class="modal__title">
-                    <span title="Закрыть окно" class="modal-close" title="Закрыть"></span>
+                    <span title="Закрыть окно" class="modal-close"></span>
                     <h2>Обратная связь </h2> 
                 </div>
                 <div class="modal__input">    
@@ -33,7 +33,7 @@
         <div class="modal hidden" data-modal="2">
             <div class="modal__wrapper">
                 <div class="modal__title">
-                    <span title="Закрыть окно" class="modal-close" title="Закрыть"></span>
+                    <span title="Закрыть окно" class="modal-close"></span>
                     <h2>Заказать звонок</h2> 
                 </div>
                 <div class="modal__input">    
@@ -77,7 +77,7 @@
                         <li class="sidebar-menu__item">Контакты</li>
                     </ul>
                     
-                    <footer class="footerNav sidebar">
+                    <footer class="sidebar footerNav">
                         <div>
                             <span class="footerNav__right border call open-modal" data-modal="2"></span>
                             <span class="footerNav__right border chat open-modal" data-modal="1"></span>
