--- a/indexfull.html
+++ b/indexfull.html
@@ -77,7 +77,7 @@
                         <li class="sidebar-menu__item">Контакты</li>
                     </ul>
                     
-                    <footer class="sidebar footerNav">
+                    <div class="sidebar footerNav">
                         <div>
                             <span class="footerNav__right border call open-modal" data-modal="2"></span>
                             <span class="footerNav__right border chat open-modal" data-modal="1"></span>
@@ -90,7 +90,7 @@
                             <span>EN</span>
                             <span>CN</span>
                         </div>
-                    </footer>
+                    </div>
                 </div>
             </nav>
         </header>
