Create indexfull.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 </div>
 
                 <ul class="sliderMenu">
-                    <li class="sliderItems sliderActiv">Ремонтируемые бренды</li>
-                    <li class="sliderItems">Ремонтируемые устройства</li>
-                    <li class="sliderItems">Цены на услуги</li>
+                    <li class="sliderItems"><a href="#brand">Ремонтируемые бренды</a></li>
+                    <li class="sliderItems"><a href="#repair">Ремонтируемые устройства</a></li>
+                    <li class="sliderItems"><a href="#price">Цены на услуги</a></li>
                     <li class="sliderItems">Адреса сервисных центров</li>
                     <li class="sliderItems">Специальные цены</li>                
                 </ul>
@@ -125,8 +125,8 @@
                     <a class="link--expand">Читать далее</a>              
                 </div>
 
-                <div class="container-wrapper">
-                    <div class="slider--title">Ремонт техники различных брендов</div>
+                <div class="container-wrapper" >
+                    <div class="slider--title"><a name="brand">Ремонт техники различных брендов</a></div>
                     <div class="swiper">
                         <div class="swiper-wrapper swiper-wrapper--active">
                             <div class="swiper-slide swiper__brand"><img src="css/img/brand/lenovo.png" alt="Brand Lenovo"></div>
@@ -152,7 +152,7 @@
                 </div>
 
                 <div class="container-wrapper">
-                    <div class="slider--title">Ремонт различных видов техники</div>
+                    <div class="slider--title"><a name="repair">Ремонт различных видов техники</a></div>
                     <div class="swiper">
                         <div class="swiper-wrapper swiper-wrapper--active swiper__boxs--widht">
                             <div class="swiper-slide swiper__boxs">Ремонт ноутбуков</div>
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="container-wrapper">
-                    <div class="slider--title">ЦЕНЫ НА УСЛУГИ</div>
+                    <div class="slider--title"><a name="price">ЦЕНЫ НА УСЛУГИ</a></div>
                     <div class="swiper swiper-tables">
                         <div class="tables-th tables-th-hidden">
                             <span>Ремонтные услуги</span>
